@@ -2634,9 +2634,9 @@ void mnstr_close(stream *s);
 void mnstr_destroy(stream *s);
 int mnstr_errnr(stream *s);
 char *mnstr_error(stream *s);
-int mnstr_fgetpos(stream *s, lng *p);
+int mnstr_fgetpos(stream *s, fpos_t *p);
 int mnstr_flush(stream *s);
-int mnstr_fsetpos(stream *s, lng p);
+int mnstr_fsetpos(stream *s, fpos_t *p);
 int mnstr_fsync(stream *s);
 buffer *mnstr_get_buffer(stream *s);
 int mnstr_init(void);
