@@ -148,8 +148,8 @@ stream_export void mnstr_destroy(stream *s);
 stream_export char *mnstr_error(stream *s);
 stream_export int mnstr_flush(stream *s);
 stream_export int mnstr_fsync(stream *s);
-stream_export int mnstr_fgetpos(stream *s, lng *p);
-stream_export int mnstr_fsetpos(stream *s, lng p);
+stream_export int mnstr_fgetpos(stream *s, fpos_t *p);
+stream_export int mnstr_fsetpos(stream *s, fpos_t *p);
 stream_export char *mnstr_name(stream *s);
 stream_export int mnstr_errnr(stream *s);
 stream_export void mnstr_clearerr(stream *s);
